stuff
In file included from src/Simplex.cpp:4:
./include/Simplex.h:52:22: warning: 'Simplex::solve' hides overloaded virtual function [-Woverloaded-virtual]
        virtual void solve();
                     ^
./include/Solve.h:19:29: note: hidden overloaded virtual function 'Solve::solve' declared here
        virtual LPSolution* solve(LinearProgram*)=0;
                            ^
src/Simplex.cpp:6:10: error: member 'Simplex' has the same name as its class
Simplex::Simplex(LinearProgram* lp)
         ^
In file included from src/Simplex.cpp:4:
./include/Simplex.h:27:7: error: 'Simplex' can not be defined in the result type of a function
class Simplex : public Solve 
      ^
src/Simplex.cpp:6:10: error: constructor cannot have a return type
Simplex::Simplex(LinearProgram* lp)
         ^~~~~~~
src/Simplex.cpp:8:5: error: use of undeclared identifier 'numLeqConstraints'
    numLeqConstraints = lp->getLeqConstraints()->getSize();
    ^
src/Simplex.cpp:8:25: error: use of undeclared identifier 'lp'
    numLeqConstraints = lp->getLeqConstraints()->getSize();
                        ^
src/Simplex.cpp:9:5: error: use of undeclared identifier 'numEqConstraints'
    numEqConstraints = lp->getEqConstraints()->getSize();
    ^
src/Simplex.cpp:9:24: error: use of undeclared identifier 'lp'
    numEqConstraints = lp->getEqConstraints()->getSize();
                       ^
src/Simplex.cpp:10:5: error: use of undeclared identifier 'numConstraints'
    numConstraints = numLeqConstraints + numEqConstraints;
    ^
src/Simplex.cpp:10:22: error: use of undeclared identifier 'numLeqConstraints'
    numConstraints = numLeqConstraints + numEqConstraints;
                     ^
src/Simplex.cpp:10:42: error: use of undeclared identifier 'numEqConstraints'
    numConstraints = numLeqConstraints + numEqConstraints;
                                         ^
src/Simplex.cpp:11:5: error: use of undeclared identifier 'numRows'
    numRows = numConstrains + 1;
    ^
src/Simplex.cpp:11:15: error: use of undeclared identifier 'numConstrains'
    numRows = numConstrains + 1;
              ^
src/Simplex.cpp:12:5: error: use of undeclared identifier 'numCols'
    numCols = numDecisionVars + numConstrains + 1;
    ^
src/Simplex.cpp:12:15: error: use of undeclared identifier 'numDecisionVars'
    numCols = numDecisionVars + numConstrains + 1;
              ^
src/Simplex.cpp:12:33: error: use of undeclared identifier 'numConstrains'
    numCols = numDecisionVars + numConstrains + 1;
                                ^
src/Simplex.cpp:13:34: error: use of undeclared identifier 'lp'
    std::istringstream countVars(lp->getEquation());
                                 ^
src/Simplex.cpp:15:5: error: use of undeclared identifier 'numDecisionVars'
    numDecisionVars = 0;
    ^
src/Simplex.cpp:17:12: error: no matching function for call to 'getline'
    while (std::getline(countVars, token, ' '))
           ^~~~~~~~~~~~
/usr/include/c++/4.6/streambuf:169:9: note: candidate template ignored: failed template argument deduction
        getline(basic_istream<_CharT2, _Traits2>&,
        ^
/usr/include/c++/4.6/bits/basic_string.h:2733:5: note: candidate function template not viable: requires 2 arguments, but 3 were provided
    getline(basic_istream<_CharT, _Traits>& __is,
    ^
src/Simplex.cpp:19:9: error: use of undeclared identifier 'numDecisionVars'
        numDecisionVars++;
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
make: *** [testinfeasible] Error 1
